disable selection on tag buttons

--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
 }
 
 #_chatSendToolExtension li span {
+  -webkit-user-select: none;
   border-radius: 2px;
   color: #ffffff;
   display: inline-block;
